<resources>
    <string name="app_name">ActiveExercise</string>
    <string name="todo">TODO</string>
    <string name="start">START</string>
    <string name="start_image">start image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="_10">10</string>
    <string name="_30">30</string>
    <string name="exerciseName">ExerciseName</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE:</string>
    <string name="todos">TODO</string>
    <string name="_1">1</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_have_done_the_workout">You have done the workout!</string>
    <string name="finish">FINISH</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you">This will stop your workout. You\'ve come this far, are you sure you</string>
    <string name="calculator">Calculator</string>
    <string name="bmi">BMI</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="calculate">CALCULATE</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="weight_in_pounds">WEIGHT (in pounds)</string>
    <string name="history">History</string>
    <string name="todo1">TODO</string>
</resources>