<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you"
        android:textColor="#212121"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnYes"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:ignore="Suspicious0dp,TouchTargetSizeCheck" />

        <Button
            android:id="@+id/btnNo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="#000000"


            android:textSize="16sp"
            tools:ignore="Suspicious0dp,TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>