<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_screen_main_layout_padding"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/myImageView"
        android:layout_width="match_parent"
        android:src="@drawable/gym"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="parent"/>
<!--        android:contentDescription="@string/start_image"-->

   <FrameLayout
       android:id="@+id/flStart"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_width="150dp"
       android:layout_height="150dp"
       android:background="@drawable/item_color_accent_border_ripple_background"
       >

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_gravity="center"
           android:text="@string/start"
           android:textColor="@color/colorPrimary"
           android:textSize="@dimen/default_button_text_size"
           android:textStyle="bold" />

   </FrameLayout>

    <FrameLayout
        android:id="@+id/flBMI"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/item_circular_color_accent_background"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flStart"
        app:layout_constraintVertical_bias="0.49">

        <!--        app:layout_constraintEnd_toStartOf="@id/flHistory"-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/bmi"
            android:textColor="@color/white"
            android:textSize="@dimen/default_button_text_size"
            android:textStyle="bold" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/calculator"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/default_button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/flBMI"
        app:layout_constraintStart_toStartOf="@id/flBMI"
        app:layout_constraintTop_toBottomOf="@+id/flBMI" />

<!--    <FrameLayout-->
<!--        android:id="@+id/flHistory"-->
<!--        android:layout_width="70dp"-->
<!--        android:layout_height="70dp"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginEnd="44dp"-->
<!--        android:background="@drawable/item_circular_color_accent_background"-->
<!--        android:gravity="center">-->
<!--&lt;!&ndash;        app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintStart_toEndtOf="parent"&ndash;&gt;-->
<!--&lt;!&ndash;        app:layout_constraintTop_toBottomOf="@+id/flStart">&ndash;&gt;-->


<!--        <ImageView-->
<!--            android:id="@+id/ivImage1"-->
<!--            android:layout_width="40dp"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_gravity="center"-->
<!--            android:src="@drawable/call"-->
<!--        />-->

<!--    </FrameLayout>-->

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:text="@string/history"-->
<!--        android:textColor="@color/colorAccent"-->
<!--        android:textSize="@dimen/default_button_text_size"-->
<!--        android:textStyle="bold"-->
<!--        app:layout_constraintEnd_toEndOf="@+id/flHistory"-->
<!--        app:layout_constraintStart_toStartOf="@id/flHistory"-->
<!--        app:layout_constraintTop_toBottomOf="@id/flHistory"-->
<!--        />-->



</androidx.constraintlayout.widget.ConstraintLayout>